Revert "added jss in my calculator"

--- a/style.css
+++ b/style.css
@@ -38,9 +38,7 @@ h1{
     gap: 20px;
 }
 
- java-script
-.operator,.mian{
-
+.number{
     color: blueviolet;
     height: 50px;
     background-color: rgb(223, 223, 226);
